# fastapriori

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_PYPI.md  plan.md  pyproject.toml
.github/workflows/: release.yml
.ipynb_checkpoints/: ARM Efficient Apriori-checkpoint.ipynb  Parts Bundling - fast-checkpoint.ipynb  Parts Bundling-Copy2 CPG-checkpoint.ipynb  Parts Bundling-checkpoint.ipynb  Parts Bundling-fast-checkpoint.ipynb
benchmarks/: baseline_runners.py  datasets.md  demo.ipynb  live_benchmark.ipynb  load_datasets.py  rigorous_baseline_benchmark_py2_1t.ipynb
benchmarks/.ipynb_checkpoints/: benchmark-checkpoint.ipynb  benchmark_polars-checkpoint.ipynb  demo-checkpoint.ipynb  demo_k-checkpoint.ipynb  final_benchmark-checkpoint.ipynb  pandas_vs_polars-checkpoint.ipynb  test-checkpoint.ipynb
fastapriori/: __init__.py  core.py  itemsets.py  triplets.py  utils.py
fastapriori.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapriori/.ipynb_checkpoints/: core-checkpoint.py
fastapriori/backends/: __init__.py  bin_multi_backend.py  itemset_counter_chain.py  pandas_backend.py  polars_backend.py  polars_itemset_backend.py  rust_backend.py  rust_classic_backend.py
src/: classic.rs  common.rs  eclat.rs  itemsets.rs  lib.rs  pairs.rs  pipeline.rs
tests/: test_algo_parameter.py  test_eclat_variant.py
