[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapriori"
version = "0.1.0"
description = "Fast association analysis at low support"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60"]
polars = ["polars>=0.20"]
graph = ["networkx>=3.0"]
benchmark = [
    "efficient-apriori>=2.0",
    "faker>=18.0",
    "tqdm>=4.60",
    "matplotlib>=3.5",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["fastapriori*"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fastapriori._fastapriori_rs"
exclude = ["**/__pycache__", "**/.ipynb_checkpoints", "**/*.pyc", "**/*~"]
