[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fastapriori"
version = "0.0.1"
description = "Fast association analysis at low support"
readme = "README_PYPI.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["association-rules", "apriori", "frequent-itemsets", "data-mining", "market-basket"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60"]
polars = ["polars>=0.20"]
graph = ["networkx>=3.0"]
benchmark = [
    "efficient-apriori>=2.0",
    "faker>=18.0",
    "tqdm>=4.60",
    "matplotlib>=3.5",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/swetmr/fastapriori"
Repository = "https://github.com/swetmr/fastapriori"
Issues = "https://github.com/swetmr/fastapriori/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fastapriori._fastapriori_rs"
exclude = ["**/__pycache__", "**/.ipynb_checkpoints", "**/*.pyc", "**/*~"]
